--- a/package.json
+++ b/package.json
@@ -13,9 +13,9 @@
     "core-js": "^3.6.4",
     "driver.js": "^0.9.8",
     "echarts": "^4.7.0",
-    "element-ui": "^2.13.1",
+    "element-ui": "^2.4.5",
     "file-saver": "^2.0.2",
-    "screenfull": "^5.0.2",
+    "screenfull": "^4.2.0",
     "vue": "^2.6.11",
     "vue-count-to": "^1.0.13",
     "vue-router": "^3.1.6",
@@ -30,6 +30,8 @@
     "@vue/cli-service": "^4.3.0",
     "@vue/eslint-config-prettier": "^6.0.0",
     "babel-eslint": "^10.1.0",
+    "babel-plugin-component": "^1.1.1",
+    "css-loader": "^3.5.3",
     "eslint": "^6.7.2",
     "eslint-plugin-prettier": "^3.1.1",
     "eslint-plugin-vue": "^6.2.2",
@@ -37,6 +39,7 @@
     "sass": "^1.26.3",
     "sass-loader": "^8.0.2",
     "script-loader": "^0.7.2",
+    "style-loader": "^1.2.1",
     "vue-cli-plugin-element": "^1.0.1",
     "vue-template-compiler": "^2.6.11"
   }
